[gd_scene load_steps=2 format=3 uid="uid://dawkluy24ywwl"]

[ext_resource type="Script" path="res://Components/UIController.gd" id="1_hvdju"]

[node name="UIController" type="Node2D"]
script = ExtResource("1_hvdju")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 150)
offset_left = -100.0
offset_top = -185.0
offset_right = 100.0
offset_bottom = -35.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HungerLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Hunger:"
horizontal_alignment = 1

[node name="HungerBar" type="ProgressBar" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 75.0
value = 75.0
allow_greater = true

[node name="GrowthLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Growth:"
horizontal_alignment = 1

[node name="GrowthBar" type="ProgressBar" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Sell: "

[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
